# intro_to_agentic_ai_langgraph

./: .gitignore  README.md  agentic-ai-basic.ipynb  agentic_ai_intro.ipynb  fine_tuning_unsloth.ipynb  kent.jsonl  mcp_intro.ipynb  pyproject.toml  pytest.py
mcp/: mcp_server.py
