[project]
name = "agentic_ai_course_basic"
version = "0.1.0"
description = "A basic agentic AI course."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain>=1.0.3",
    "langchain-community>=0.3.27",
    "langchain-ollama",
    "langgraph>=0.6.5",
    "ollama>=0.5.3",
    "typing-extensions>=4.14.1",
]
